--- a/cssfile.css
+++ b/cssfile.css
@@ -54,7 +54,8 @@ body {
 .mealplus {
   position: absolute;
   height: 600px;
-  transform: rotate(12.5deg)
+  transform: rotate(12deg);
+
 }
 
 #feature {
@@ -106,14 +107,14 @@ h3 {
   margin: 3%
 }
 
-@media screen (max-width:1000px) {
+@media  (max-width:1000px) {
   .main-container {
     text-align: center;
   }
 
   .mealplus {
-    position: static;
-    transform: rotate(0);
+    position: relative;
+    transform: rotate(0deg);
   }
 }
 
